feat(account): removing initial_amount column
