# db/schema.rb
@@ -10,14 +10,13 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2021_05_01_100622) do
+ActiveRecord::Schema[7.0].define(version: 2022_10_10_192003) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
   create_table "accounts", force: :cascade do |t|
     t.string "name"
     t.string "description"
-    t.decimal "initial_amount", default: "0.0", null: false
     t.integer "account_type", null: false
     t.bigint "user_id", null: false
     t.datetime "created_at", null: false
